# 2020-website

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  CNAME  README.md  _redirects  config.yml  index.html  modd.conf  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  schedule-sync.py  speaker-pack-hax.py  supervisord.conf  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md
.github/workflows/: update_schedule.yml
about/: index.html
assets/people/: _etags.yml
attend/: index.html
conduct/: index.html
culture/: index.html
data/News/: 2020-04-08-online-announcement.md  2020-06-10-dates-announce.md  2020-08-12-program-and-registration.md  (+3 more)
frontend/: backstage.scss  backstage.ts  index.js  index.scss  profile.scss  program.ts  schedule.scss
models/: News.yml  Page.yml  Person.yml  Session.yml  SpeakerPack.yml  SpecialSponsor.yml  Sponsor.yml  Track.yml  Workshop.yml
news/: index.html
program-sunday/: index.html
shirt/: index.html
speakers/: index.html
sponsor/: index.html
templates/: _base.html  _macros.html  _sponsor.html  _sponsor_macros.html  _workshop.html  about.html  home.html  news_index.html  news_post.html  page.html  program-redirect.html  program-sunday.html  program.html  session.html  speaker-pack.html  sponsors.html  track.html  workshops.html
views/: about.yml  home.yml  news_index.yml  news_post.yml  page.yml  program-redirect.yml  program-sunday.yml  program.yml  session.yml  speaker-pack.yml  sponsors.yml  tracks.yml  workshops.yml
(+435 files in other folders)
