[tool.poetry]
name = "pyconau-2020-website"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]

[tool.poetry.dependencies]
python = "^3.7"
statik = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
